testing_temp/temp-compiler_output__Length_Adimensional_float128_int8_False_True_7087576734978295633_False_True__.txt
testing_temp\temp-test__Length_Adimensional_float128_int8_False_True_7087576734978295633_False_True__.cpp: In function 'int main(int, char**)':
testing_temp\temp-test__Length_Adimensional_float128_int8_False_True_7087576734978295633_False_True__.cpp:11:150: error: invalid use of incomplete type 'struct dim_analysis::Unmatched_dimensions_in_addition_between<long double, Dimensions<std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> >, signed char, Dimensions<std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> > >'
             long double bi_a = 7;std::int8_t bi_b = 2;auto bi_c = bi_a < bi_b;float128<Length> lt_a(7);int8<Adimensional> lt_b(2);auto lt_c = lt_a + lt_b;std::cout << bi_c == lt_c.value << std::endl;std::cout << std::is_same<decltype(bi_c), decltype(lt_c.value)>::result;
                                                                                                                                                      ^~~~
In file included from testing_temp\temp-test__Length_Adimensional_float128_int8_False_True_7087576734978295633_False_True__.cpp:5:0:
testing_temp\../dimensional_analysis.h:242:26: note: declaration of 'struct dim_analysis::Unmatched_dimensions_in_addition_between<long double, Dimensions<std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> >, signed char, Dimensions<std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> > >'
   SAME_UNITS_OPERATOR(+, Unmatched_dimensions_in_addition_between)
                          ^
testing_temp\../dimensional_analysis.h:194:94: note: in definition of macro 'SAME_UNITS_OPERATOR'
    template<typename NumT_lhs, typename DimsLhs, typename NumT_rhs, typename DimsRhs> struct ERROR_MESSAGE;\
                                                                                              ^~~~~~~~~~~~~
testing_temp\temp-test__Length_Adimensional_float128_int8_False_True_7087576734978295633_False_True__.cpp:11:262: error: template argument 2 is invalid
             long double bi_a = 7;std::int8_t bi_b = 2;auto bi_c = bi_a < bi_b;float128<Length> lt_a(7);int8<Adimensional> lt_b(2);auto lt_c = lt_a + lt_b;std::cout << bi_c == lt_c.value << std::endl;std::cout << std::is_same<decltype(bi_c), decltype(lt_c.value)>::result;
                                                                                                                                                                                                                                                                      ^
